# runanywhere-sdks

./: .gitignore  .npmrc  Package.swift  REACT_NATIVE_ANDROID_RAG_APP_BUILD.md  logs.txt  pnpm-workspace.yaml  rebuild-android-ndk26.sh
examples/android/RunAnywhereAI/: settings.gradle.kts
examples/android/RunAnywhereAI/app/: build.gradle.kts
examples/android/RunAnywhereAI/app/src/main/java/com/runanywhere/runanywhereai/: MainActivity.kt  RunAnywhereApplication.kt
examples/android/RunAnywhereAI/app/src/main/java/com/runanywhere/runanywhereai/presentation/chat/components/: ModelRequiredOverlay.kt
examples/android/RunAnywhereAI/app/src/main/java/com/runanywhere/runanywhereai/presentation/models/: ModelSelectionViewModel.kt
examples/android/RunAnywhereAI/app/src/main/java/com/runanywhere/runanywhereai/presentation/navigation/: AppNavigation.kt  MoreHubScreen.kt
examples/android/RunAnywhereAI/app/src/main/java/com/runanywhere/runanywhereai/presentation/rag/: DocumentRAGScreen.kt  RAGViewModel.kt
examples/ios/RunAnywhereAI/RunAnywhereAI/App/: ContentView.swift  RunAnywhereAIApp.swift
examples/react-native/RunAnywhereAI/: App.tsx  package-lock.json  package.json
examples/react-native/RunAnywhereAI/ios/: Podfile
examples/react-native/RunAnywhereAI/src/screens/: RAGScreen.tsx
sdk/runanywhere-commons/: CMakeLists.txt
sdk/runanywhere-commons/exports/: RACommons.exports
sdk/runanywhere-commons/include/rac/backends/: rac_rag.h
sdk/runanywhere-commons/include/rac/features/rag/: rac_rag_pipeline.h
sdk/runanywhere-commons/include/rac/infrastructure/model_management/: rac_model_types.h
sdk/runanywhere-commons/scripts/: build-android.sh  build-ios.sh
sdk/runanywhere-commons/src/backends/llamacpp/: CMakeLists.txt
sdk/runanywhere-commons/src/backends/onnx/: CMakeLists.txt
sdk/runanywhere-commons/src/backends/rag/: CMakeLists.txt  inference_provider.h  llamacpp_generator.cpp  llamacpp_generator.h  onnx_embedding_provider.cpp  onnx_generator.cpp  onnx_generator.h  rac_backend_rag_register.cpp  rac_rag_pipeline.cpp  rag_backend.cpp  rag_backend.h  rag_chunker.cpp  vector_store_usearch.cpp  vector_store_usearch.h
sdk/runanywhere-commons/src/backends/rag/jni/: rac_backend_rag_jni.cpp
sdk/runanywhere-commons/tests/: CMakeLists.txt
sdk/runanywhere-kotlin/: build.gradle.kts  settings.gradle.kts
sdk/runanywhere-kotlin/modules/runanywhere-core-rag/: build.gradle.kts
sdk/runanywhere-kotlin/modules/runanywhere-core-rag/src/commonMain/kotlin/com/runanywhere/sdk/rag/: RAGModule.kt
sdk/runanywhere-kotlin/modules/runanywhere-core-rag/src/jvmAndroidMain/kotlin/com/runanywhere/sdk/rag/: RAGModule.jvmAndroid.kt
sdk/runanywhere-kotlin/scripts/: build-kotlin.sh
sdk/runanywhere-kotlin/src/commonMain/kotlin/com/runanywhere/sdk/public/extensions/: RunAnywhere+ModelManagement.kt
sdk/runanywhere-kotlin/src/commonMain/kotlin/com/runanywhere/sdk/public/extensions/Models/: ModelTypes.kt
sdk/runanywhere-kotlin/src/jvmAndroidMain/kotlin/com/runanywhere/sdk/foundation/bridge/extensions/: CppBridgeModelRegistry.kt
sdk/runanywhere-kotlin/src/jvmAndroidMain/kotlin/com/runanywhere/sdk/public/extensions/: RunAnywhere+ModelManagement.jvmAndroid.kt  RunAnywhere+RAG.jvmAndroid.kt
sdk/runanywhere-kotlin/src/jvmAndroidMain/kotlin/com/runanywhere/sdk/rag/: RAGBridge.kt
sdk/runanywhere-react-native/scripts/: build-react-native.sh
sdk/runanywhere-swift/Sources/RAGRuntime/: RAG.swift
sdk/runanywhere-swift/Sources/RAGRuntime/include/: RAGBackend.c  RAGBackend.h  module.modulemap  rac_rag.h
sdk/runanywhere-swift/Sources/RunAnywhere/CRACommons/include/: CRACommons.h  rac_model_types.h  rac_rag_pipeline.h
sdk/runanywhere-swift/Sources/RunAnywhere/Foundation/Bridge/Extensions/: CppBridge+RAG.swift  ModelTypes+CppBridge.swift
sdk/runanywhere-swift/Sources/RunAnywhere/Public/Extensions/Models/: ModelTypes.swift
sdk/runanywhere-swift/Sources/RunAnywhere/Public/Extensions/RAG/: RAGTypes.swift
sdk/runanywhere-swift/scripts/: build-swift.sh
